public/assets/css/main.css
/* ... */
.hero hr {
  color: var(--accent-color);
  border: 3px solid;
}

.hero h1 span, .skills h1 span {
  font-size: 60px;
  font-weight: 800;
  color: var(--accent-color);
  line-height: 70px;
}

.hero p {
  color: color-mix(in srgb, var(--default-color), transparent 30%);
  margin: 5px 0 30px 0;
  font-size: 25px;
  font-weight: 400;
}

.hero .btn-get-started {
  color: var(--contrast-color);
  background: var(--accent-color);
  font-family: var(--heading-font);
  font-weight: 400;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 12px 30px;
  border-radius: 4px;
  transition: 0.5s;
  box-shadow: 0 8px 28px rgba(0, 0, 0, 0.1);
}

.hero .btn-get-started:hover {
  color: var(--contrast-color);
  background: color-mix(in srgb, var(--accent-color), transparent 15%);
  box-shadow: 0 8px 28px rgba(0, 0, 0, 0.1);
}

.hero .btn-watch-video {
  font-size: 16px;
  transition: 0.5s;
  margin-left: 25px;
  color: var(--default-color);
  font-weight: 600;
}

.hero .btn-watch-video i {
  color: var(--accent-color);
  font-size: 32px;
  transition: 0.3s;
  line-height: 0;
  margin-right: 8px;
}

.hero .btn-watch-video:hover {
  color: var(--accent-color);
}

.hero .btn-watch-video:hover i {
  color: color-mix(in srgb, var(--accent-color), transparent 15%);
}

.hero .animated {
  animation: up-down 2s ease-in-out infinite alternate-reverse both;
}

@media (max-width: 640px) {
  .hero h1 {
    font-size: 28px;
    line-height: 36px;
  }

  .hero p {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 30px;
  }

  .hero .btn-get-started,
  .hero .btn-watch-video {
    font-size: 13px;
  }

  .testimonials {
    margin-top: -100px !important;
  }

  .stats.section {
    margin-top: -350px !important;
    padding-top: 400px !important;
  }
}

@keyframes up-down {
  0% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(-10px);
  }
}

/*--------------------------------------------------------------
# Featured Services Section
--------------------------------------------------------------*/
.featured-services .service-item {
  background-color: var(--surface-color);
  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
  padding: 50px 30px;
  transition: all 0.3s ease-in-out;
  height: 100%;
  position: relative;
  z-index: 1;
}

.featured-services .service-item:before {
  content: "";
  position: absolute;
  background: var(--accent-color);
  inset: 100% 0 0 0;
  transition: all 0.3s;
  z-index: -1;
}

.featured-services .service-item .icon {
  margin-bottom: 10px;
}

.featured-services .service-item .icon i {
  color: var(--accent-color);
  font-size: 36px;
  transition: ease-in-out 0.3s;
}

.featured-services .service-item h4 {
  font-weight: 700;
  margin-bottom: 15px;
  font-size: 20px;
}

.featured-services .service-item h4 a {
  color: var(--heading-color);
  transition: ease-in-out 0.3s;
}

.featured-services .service-item p {
  line-height: 24px;
  font-size: 14px;
  margin-bottom: 0;
  transition: ease-in-out 0.3s;
}

.featured-services .service-item:hover h4 a,
.featured-services .service-item:hover .icon i,
.featured-services .service-item:hover p {
  color: var(--contrast-color);
}

.featured-services .service-item:hover:before {
  background: var(--accent-color);
  inset: 0;
  border-radius: 0px;
}

/*--------------------------------------------------------------
# About Section
--------------------------------------------------------------*/
.about p, .about p span{
  color: var(--contrast-color);
}

.about h3 {
  color: var(--accent-color);
}

.about .about-content h3 {
  font-weight: 700;
  font-size: 26px;
}

.about .about-content ul {
  list-style: none;
  padding: 0;
}

.about .about-content ul li {
  display: flex;
  align-items: flex-start;
  margin-bottom: 35px;
}

.about .about-content ul li:first-child {
  margin-top: 35px;
}

.about .about-content ul i {
  background: var(--surface-color);
  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 64px;
  height: 64px;
  font-size: 24px;
  margin-right: 15px;
  color: var(--accent-color);
  border-radius: 50px;
}

.about .about-content ul h4 {
  font-size: 18px;
  font-weight: 600;
}

.about .about-content ul p {
  font-size: 15px;
}

.about .about-content p:last-child {
  margin-bottom: 0;
}

/*--------------------------------------------------------------
# Skills Section
--------------------------------------------------------------*/
.skills .progress {
  height: 60px;
  display: block;
  background: none;
  border-radius: 0;
}

.skills .progress .skill {
  color: var(--heading-color);
  padding: 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: var(--heading-font);
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: color-mix(in srgb, var(--default-color), transparent 90%);
  height: 20px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.skills .progress-bar {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 1px;
  height: 20px;
  transition: 0.9s;
  background-color: var(--accent-color);
}

/*--------------------------------------------------------------
# CTA Section
--------------------------------------------------------------*/
.cta.section {
  background-color: var(--accent-color);
}

.cta .progress {
  height: 60px;
  display: block;
  background: none;
  border-radius: 0;
}

.cta .progress .skill {
  color: var(--heading-color);
  padding: 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: var(--heading-font);
}

.cta .progress .skill .val {
  float: right;
  font-style: normal;
}
/* ... */

